# pm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  board_seed.py  database.py  main.py
backend/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_ai_api.py  test_ai_chat_api.py  test_ai_chat_logic.py  test_app.py  test_auth.py  test_board_api.py  test_database.py
docs/: AI_API.md  BOARD_API.md  DB_SCHEMA.md  PLAN.md  code_review.md  review.md
frontend/: AGENTS.md  package.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: globals.css
frontend/src/components/: AISidebar.test.tsx  AISidebar.tsx  AppShell.test.tsx  AppShell.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx
frontend/src/lib/: kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
