[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.120.0",
  "openai>=2.0.0",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
